chore: updating dependencies for 0 vulnerabilities

--- a/package.json
+++ b/package.json
@@ -36,26 +36,26 @@
   "homepage": "https://github.com/tradle/configure-tradle",
   "dependencies": {
     "@tradle/errors": "^2.0.0",
-    "@tradle/merge-models": "^2.1.0",
+    "@tradle/merge-models": "^3.0.0",
     "@tradle/models": "github:tradle/models",
     "@tradle/models-cloud": "github:tradle/models-cloud",
     "@tradle/models-pack": "^1.1.0",
-    "@tradle/protocol": "^5.1.0",
+    "@tradle/protocol": "^5.1.1",
     "@tradle/qr": "github:tradle/qr",
     "@tradle/qr-schema": "github:tradle/qr-schema",
-    "@tradle/validate-model": "^7.1.32",
+    "@tradle/validate-model": "^7.1.35",
     "@tradle/validate-resource": "^4.3.5",
     "amazon-s3-uri": "0.0.3",
-    "ansi-colors": "^3.1.0",
-    "aws-sdk": "^2.382.0",
+    "ansi-colors": "^4.1.1",
+    "aws-sdk": "^2.1051.0",
     "co": "^4.6.0",
     "commander": "^6.2.1",
     "debug": "^3.1.0",
     "dotenv": "^4.0.0",
-    "eslint": "^3.15.0",
-    "eslint-plugin-json": "^1.2.0",
+    "eslint": "^8.6.0",
+    "eslint-plugin-json": "^3.1.0",
     "execa": "^1.0.0",
-    "inquirer": "^5.1.0",
+    "inquirer": "^8.2.0",
     "lexicographic-semver": "^1.0.1",
     "listr": "^0.13.0",
     "lodash": "^4.17.21",
@@ -65,21 +65,23 @@
     "pify": "^3.0.0",
     "promise-retry": "^1.1.1",
     "promptly": "^2.2.0",
+    "protocol-buffers": "^4.2.0",
     "shelljs": "^0.8.4",
     "source-map-support": "^0.5.3",
     "tmp": "0.0.33",
     "tslib": "^1.9.0",
-    "update-notifier": "^2.3.0",
-    "yn": "^2.0.0"
+    "update-notifier": "^5.1.0",
+    "yn": "^2.0.0",
+    "zen-observable": "^0.8.15"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.175",
-    "@types/node": "^14.10.3",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "14.10.3",
     "husky": "^0.14.3",
-    "lint-staged": "^7.2.0",
+    "lint-staged": "^12.1.5",
     "sinon": "^7.1.0",
-    "standard-version": "github:mvayngrib/standard-version#fixdeps",
-    "tape": "^5.3.1",
+    "standard-version": "^9.3.2",
+    "tape": "^5.4.0",
     "typescript": "3.3.4000"
   },
   "lint-staged": {
